--- a/index.css
+++ b/index.css
@@ -412,7 +412,7 @@ hr{
     /* border: 1px solid red; */
     height: 55px;
     width: 100px;
-    background-color: rgba(128, 128, 128, 0.39);
+    background-color: rgba(128, 128, 128, 0.185);
     border-radius: 10px;
     margin-bottom: 15px;
     border: none;   
@@ -448,7 +448,7 @@ hr{
 
 
 
-.DivClass15{
+.DivClass15, .DivClass19{
     background-color: rgba(128, 128, 128, 0.137);
     width: 550px;
     margin: 0px auto;
@@ -458,6 +458,17 @@ hr{
     display: flex;
     justify-content: space-between;
     margin: 0px 30px;
+}
+.DivClass17{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 40px;
+    margin-top: -1em;
+}
+
+.DivClass17 p{
+    font-size: large;
+    font-weight: bold;
 }
 .DivClass18{
     margin-left: 38px;
@@ -479,25 +490,40 @@ hr{
     font-size: large;
     background-color: #1dd100;
     border: none;
+    color: white;
 
     position: relative;
     bottom: 50px;
     left: 350px;
 }
-
-.DivClass17{
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 40px;
-    margin-top: -1em;
-}
-
-.DivClass17 p{
-    font-size: large;
-    font-weight: bold;
-}
 #id4{
    text-align: center;
    margin-top: 70px;
    font-size: xx-large;
+}
+.DivClass19 input{
+   height: 40px;
+   width: 420px;
+   border: none;
+   padding-left: 15px;
+   border-radius: 10px;
+   margin-left: 53px;
+   margin-bottom: 20px;
+}
+.DivClass19 h3{
+    margin-left: 53px;
+}
+
+.DivClass19 button{
+    height: 45px;
+    width: 438px;
+    margin-left: 53px;
+    border-radius: 10px;
+    margin-top: 8px;
+    margin-bottom: 20px;
+    font-size: large;
+    font-weight: bold;
+    background-color: #1dd100;
+    color: white;
+    border: none;
 }
