--- a/index.css
+++ b/index.css
@@ -469,12 +469,18 @@ hr{
 .DivClass16{
     display: flex;
     justify-content: space-between;
-    margin: 0px 30px;
+    margin: 0px 60px;
+    /* border: 1px solid red; */
+    height: 50px;
+}
+.DivClass16 p{
+    font-size:large;
+    font-weight: bold;
 }
 .DivClass17{
     display: flex;
     justify-content: space-between;
-    margin: 20px 40px;
+    margin: 20px 70px 20px 60px;
     margin-top: -1em;
 }
 
@@ -540,8 +546,62 @@ hr{
     color: white;
     border: none;
 }
+#ScrollingDiv{
+    height: 100px;
+    /* border: 1px solid red; */
+    overflow-y: scroll;
 
+    
+}
+/* This div & inner p both will be created dynamicallay */
+#ScrollingDiv div{    
+   display: flex;
+   justify-content: space-between;
+   padding: 0px 60px;
+}
+#DiscountDiv{
+    /* border: 1px solid red; */
+    height: 30px;
+    margin-top: -3em;
+    margin-bottom: 10px;
+}
+/* This inner p will be created dynamicallay */
+#DiscountInfoDisplay{
+    text-align: center;
+    font-size: larger;
+    font-weight: bold;
+    margin: 5px;
+}
+#DiscountAlarm{
+    height: 200px;
+    width: 550px;
+    background-color: white;
+    box-shadow: 0px 0px 5px 0px #1dd100;
+
+    position: relative;
+    bottom: 200px;
+}
+#DiscountAlarm p{
+    font-size: 2em;
+    font-weight: 600;
+    padding: 30px 50px;
+}
+#DiscountAlarmButton{
+    height: 50px;
+    width: 130px;
+    background-color: #1cd10096;
+    font-size: x-large;
+    font-weight: bold;
+    border: none;
+    border-radius: 15px;
+    margin-left: 190px;
+    margin-top: -1em;
+}
 
 .SeatsBgColor{
     background-color: #1dd100;
+}
+
+.DisplayHidden{
+    display: none;
 }
