--- a/index.css
+++ b/index.css
@@ -574,12 +574,13 @@ hr{
 }
 #DiscountAlarm{
     height: 200px;
-    width: 550px;
+    width: 650px;
     background-color: white;
     box-shadow: 0px 0px 5px 0px #1dd100;
 
     position: relative;
-    bottom: 200px;
+    bottom: 850px;
+    left: 1038px;
 }
 #DiscountAlarm p{
     font-size: 2em;
@@ -594,7 +595,7 @@ hr{
     font-weight: bold;
     border: none;
     border-radius: 15px;
-    margin-left: 190px;
+    margin-left: 260px;
     margin-top: -1em;
 }
 
